# Parser

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  automation.py  channels.txt  docker-compose.yml  launcher.bat  launcher.ps1  main.py  requirements.runtime.txt  requirements.txt
cache/: cache.json
config/: prompts.json
data/: parser.db
docs/: PROJECT_STRUCTURE.md
launchers/: README.md  run.bat  run_automation.bat  run_automation_scheduled.bat  run_automation_yesterday.bat  setup_enhanced.bat
webpanel/backend/: .gitignore  README.md  pyproject.toml
webpanel/backend/app/: __init__.py  config.py  db.py  deps.py  main.py  security.py  static.py
webpanel/backend/app/models/: __init__.py  job.py  schedule.py  telegram_account.py  user.py
webpanel/backend/app/routers/: auth.py  browser_auth.py  google.py  health.py  jobs.py  parser_config.py  parser_db.py  schedules.py  telegram_accounts.py  users.py
webpanel/backend/app/schemas/: auth.py  job.py  schedule.py  telegram_account.py  user.py
webpanel/backend/app/services/: __init__.py  browser_session.py  jobs_runner.py  parser_db.py  parser_files.py  rotation.py  scheduler.py  telegram_auth.py
webpanel/backend/scripts/: bootstrap_admin.py
webpanel/backend/tests/: conftest.py  test_auth.py  test_browser_auth.py  test_google.py  test_health.py  test_jobs.py  test_jobs_rotation.py  test_jobs_runner_env.py  test_parser_config.py  test_parser_db.py  test_post_parse_cleanup.py  test_rotation.py  test_schedules.py  test_telegram_accounts.py  test_telegram_auth.py  test_users.py
(+122 files in other folders)
