[project]
name = "parser-webpanel-backend"
version = "0.1.0"
description = "FastAPI backend for the AllInclusiveParser admin web panel"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.40",
    "sqlmodel>=0.0.22,<0.1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "bcrypt>=4.2,<5",
    "pyjwt>=2.9,<3",
    "python-multipart>=0.0.9,<0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.25",
    "httpx>=0.27,<0.29",
    "ruff>=0.6,<0.13",
    "mypy>=1.11,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
